methods.picture.PictureMono3.scala.error
Erreur de compilation :
PictureMono3:15: error: not found: value replacageCoteGauche
    replacageCoteGauche()
    ^